--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-{{ title }}
+<!-- {{ title }}
+
 <br/>
+
 {{ name }}
+
+<br/>
+
+<input [ngModel]="name" type="text"> One way data binding []
+
+<input [(ngModel)]="name" type="text"> Two way data binding [()] -->
+
+<div class="container">
+    <app-course-list></app-course-list>
+</div>
