--- a/src/app/courses/course-list-component.html
+++ b/src/app/courses/course-list-component.html
@@ -27,8 +27,8 @@
             <td><img [src]="course.imageUrl" width="25" height="25"></td>
             <td>{{ course.name }}</td>
             <td>{{ course.price }}</td>
-            <td>{{ course.code }}</td>
-            <td>{{ course.releaseDate }}</td>
+            <td>{{ course.code | lowercase }}</td>
+            <td>{{ course.releaseDate | date: 'dd/MM/yyyy'}}</td>
             <td>
                 <app-star [rating]="course.rating!"></app-star>
             </td>
