Trabalhando com formulário e templatea

--- a/src/app/courses/course-info-component.html
+++ b/src/app/courses/course-info-component.html
@@ -7,7 +7,7 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Name</label>    
         <div class="col-sm-10">
-            <input [(ngModel)]="course.name" name="name" #courseName="ngModel" class="form-control">
+            <input [(ngModel)]="course.name" required name="name" #courseName="ngModel" [ngClass]="{'is invalid': courseName.invalid}" class="form-control">
         </div>    
     </div>
 
